--- a/project/styles.css
+++ b/project/styles.css
@@ -4,9 +4,21 @@
     padding: 0;
 }
 
+h1, h3 {
+    font-family: 'Fraunces 144pt', sans-serif;
+    color: #24053E;
+}
+
+p {
+    font-family: 'manrope', sans-serif;
+    color: #584D62;
+    font-weight: 100;
+}
+
 .purple-bg {
     background-color: #24053E;
-    padding-bottom: 60px;
+    padding-bottom: 80px;
+    border-radius: 100%/0 0 30px 30px;
 }
 
 nav {
@@ -24,7 +36,6 @@ li {
 }
 
 .access-txt {
-    font-family: 'manrope', sans-serif;
     font-weight: bold;
     border-bottom: 3px solid #44FFA1;
     line-height: 32px;
@@ -35,14 +46,11 @@ li {
     color: white;
 }
 
-h1, h3 {
-    font-family: 'Fraunces 144pt', sans-serif;
-}
-
 h1 {
     font-size: 46px;
     padding: 20px;
     text-align: center;
+    color: white;
 }
 
 h1 span {
@@ -51,7 +59,7 @@ h1 span {
 
 
 
-.head-section button {
+button {
     display: block;
     margin: 0 auto;
     padding: 20px 25px;
@@ -59,7 +67,7 @@ h1 span {
     border: none;
 }
 
-.head-section a {
+a {
     color: #24053E;
     font-family: 'manrope', sans-serif;
     font-weight: bold;
@@ -67,20 +75,98 @@ h1 span {
     font-size: 16px;
 }
 
-.round {
-    width: 100%;
-    height: 50px;
-    background-color: #24053E;
-    border-radius: 50%;
+.phone-img {
+    display: inline-block;
+    width: 320px;
+    margin: 0 auto;
     position: absolute;
-    bottom: 160px;
-    transform: scale(1.3);
+    left: 0;
+    right: 0;
+    bottom: 140px;
+}
+
+.card-section {
+    padding: 140px 20px 20px 20px;
+    text-align: center;
+    color: #24053E;
+    background-color: #FCF8FF;
+    border-radius: 100%/0 0 30px 30px;
+}
+
+.card {
+    margin: 60px 0;
+}
+
+.num {
+    font-family: 'Fraunces 144pt', sans-serif;
+    display: inline-block;
+    padding: 20px;
+    font-size: 20px;
+    border-radius: 50%
+}
+
+.num-circle {
+    margin: 20px auto;
+    width: 60px;
+    border-radius: 50%;
+    border: 1px solid #584D62;
+}
+
+h3 {
+    margin: 20px;
+    font-size: 28px;
+}
+
+.desc {
+    line-height: 28px;
+    font-size: 16px;
+}
+
+.founder-section h3,.founder-section p {
+    color: white;
+}
+
+.founder-section img {
+    display: block;
+    position: relative;
+    top: 60px;
+    width: 80%;
+    margin: 100px auto 0 auto;
     z-index: -1;
 }
 
-.phone-img {
-    display: block;
-    max-width: 80%;
-    z-index: 1;
-    margin: 0 auto;
+.founder-section div {
+    background-color: #24053E;
+    text-align: center;
+    padding: 32px;
 }
+
+.founder-section p {
+    line-height: 28px;
+    margin: 20px;
+}
+
+.founder-section button {
+    margin: 24px auto;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 0;
+}
+
+footer img {
+    margin: 40px 0;
+}
+
+footer div {
+    margin: 20px;
+}
+
+.icons img {
+    margin: 0 10px;
+}
+
+
