--- a/project/styles.css
+++ b/project/styles.css
@@ -9,12 +9,13 @@ body {
 }
 
 h1, h3 {
-    font-family: 'Fraunces 144pt', sans-serif;
+    font-family: 'Fraunces', sans-serif;
     color: #24053E;
+    font-weight: 500;
 }
 
 p {
-    font-family: 'manrope', sans-serif;
+    font-family: 'Manrope', sans-serif;
     color: #584D62;
     font-weight: 100;
 }
@@ -44,7 +45,7 @@ li img {
 }
 
 .access-txt {
-    font-family: 'manrope', sans-serif;
+    font-family: 'Manrope', sans-serif;
     font-weight: bold;
     border-bottom: 3px solid #44FFA1;
     line-height: 32px;
@@ -72,7 +73,7 @@ h1 span {
 
 button {
     cursor: pointer;
-    font-family: 'manrope', sans-serif;
+    font-family: 'Manrope', sans-serif;
     display: block;
     margin: 0 auto;
     padding: 20px 25px;
@@ -113,7 +114,7 @@ button {
 }
 
 .num {
-    font-family: 'Fraunces 144pt', sans-serif;
+    font-family: 'Fraunces', sans-serif;
     width: 46px;
     height: 46px;
     border-radius: 50%;
@@ -178,6 +179,10 @@ footer img {
 
 footer div {
     margin: 20px;
+}
+
+footer p {
+    font-weight: 100;
 }
 
 .icons img {
